--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   </head>
   <body>
     <!-- START NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">
-          <img src="images/logo.png" alt="PetShop" />
+        <a class="navbar-brand"  href="#">
+          <img src="images/footer.png" alt="PetShop" />
         </a>
         <button
           class="navbar-toggler"
@@ -65,7 +65,7 @@
     <!-- END NAVBAR -->
 
      <!-- START CAROUSEL -->
-     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide mt-5" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block w-100" src="images/hero-4s.png" alt="First slide">
@@ -137,15 +137,15 @@
 
 
      <!-- Start What's New -->
-     <section class="whats">
+     <section class="whats p-5">
        <div class="container">
          <div class="row mb-3">
            <div class="col">
              <h3>What's New</h3>
            </div>
          </div>
-         <div class="row">
-           <div class="col-3">
+         <div class="row d-flex justify-content-center">
+           <div class="col-xs-3">
             <figure class="figure">
               <img src="images/w-1.png" class="figure-img img-fluid rounded">
               <figcaption class="figure-caption text-center">
@@ -154,7 +154,7 @@
               </figcaption>
             </figure>
            </div>
-           <div class="col-3">
+           <div class="col-xs-6">
             <figure class="figure">
               <img src="images/w-2.png" class="figure-img img-fluid rounded">
               <figcaption class="figure-caption text-center">
@@ -163,7 +163,7 @@
               </figcaption>
             </figure>
            </div>
-           <div class="col-3">
+           <div class="col-xs-6">
             <figure class="figure">
               <img src="images/w-3.png" class="figure-img img-fluid rounded">
               <figcaption class="figure-caption text-center">
@@ -172,7 +172,7 @@
               </figcaption>
             </figure>
            </div>
-           <div class="col-3">
+           <div class="col-xs-6">
             <figure class="figure">
               <img src="images/w-4.png" class="figure-img img-fluid rounded">
               <figcaption class="figure-caption text-center">
@@ -230,25 +230,28 @@
 
 
      <!-- START FOOTER -->
-    <footer class="footer mt-5 pt-5">
+    <footer class="footer mt-5 p-5">
       <div class="container">
         <div class="row text-white justify-content-between">
           <div class="col-1">
-            <img src="images/footer.png" alt="">
+            <img src="images/footer.png" alt="" />
           </div>
-          <div class="col-2">
-            <h5>About Us</h5><br>
+          <div class="col-2 about">
+            <h5>About Us</h5>
+            <br />
             <p class="teks1">Company Profile</p>
             <p class="teks1">Product</p>
           </div>
-          <div class="col-2">
-            <h5>Category</h5><br>
+          <div class="col-2 category">
+            <h5>Category</h5>
+            <br />
             <p class="teks1">Cats</p>
             <p class="teks1">Dogs</p>
             <p class="teks1">Pet Food</p>
           </div>
-          <div class="col-2">
-            <h5>Contact</h5><br>
+          <div class="col-xs-5 contact">
+            <h5>Contact</h5>
+            <br />
             <p class="teks1">021 - 5648 - 9731</p>
             <p class="teks1">petshop@icloud.com</p>
             <p class="teks1">Kemang, Jakarta</p>
@@ -256,19 +259,14 @@
         </div>
         <div class="row text-white">
           <div class="col">
-            <p class="copyright">All Right Reserved by PetShop Copyright 2020</p>
+            <p class="copyright">
+              All Right Reserved by PetShop Copyright 2020
+            </p>
           </div>
         </div>
       </div>
     </footer>
-
-
-
-
-
-
-     <!-- AKHIR FOOTER -->
-
+    <!-- AKHIR FOOTER -->
 
 
     <!-- Optional JavaScript -->
