add final checkout page

--- a/cart.html
+++ b/cart.html
@@ -256,7 +256,7 @@
               </div>
               <div class="row mt-3">
                 <div class="col">
-                    <button type="button" class="btn btn-warning btn-block">Buy Now</button>
+                    <button type="button" class="btn btn-warning btn-block" data-toggle="modal" data-target="#checkoutModal">Check Out Now</button>
                 </div>
                 <div class="col">
                     <button
@@ -280,7 +280,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-body text-center">
-        <img src="img/cart/sukses_checkout.png" class="mb-5">
+        <img src="images/yay.png" class="mb-5">
         <h3>Checkout Berhasil</h3>
         <p>Anda akan mendapatkan barang anda <br> dalam beberapa hari</p>
         <button type="button" class="btn mt-3" style="background-color: #EAEAEF; color: #ADADAD;"
