--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       
         <h1 class="text-hero">Looking for a <br><span>Best Friend?</span></h5>
         <p class="text-banner">Our best pets <br> are waiting for a home</p>
-        <a href="" class="btn btn-warning">Get It Now</a>
+        <a href="single.html" class="btn btn-warning">Get It Now</a>
       </div>
 
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
