--- a/single.html
+++ b/single.html
@@ -114,7 +114,7 @@
             </div>
           </div>
           <div class="btn-product">
-            <button type="submit" class="btn btn-warning">Buy Now</button>
+            <a href="cart.html"><button type="button" class="btn btn-warning">Buy Now</button></a>
             <button
               type="submit"
               class="btn"
