add href navbar & footer

--- a/cart.html
+++ b/cart.html
@@ -46,13 +46,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Category</a>
+              <a class="nav-link" href="index.html">Category</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Product</a>
+              <a class="nav-link" href="single.html">Product</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About Us</a>
