--- a/single.html
+++ b/single.html
@@ -26,6 +26,7 @@
     <title>Pet Shop</title>
   </head>
   <body>
+    
     <!-- START NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
@@ -46,13 +47,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Category</a>
+              <a class="nav-link" href="index.html">Category</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Product</a>
+              <a class="nav-link" href="single.html">Product</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About Us</a>
@@ -82,7 +83,7 @@
     <!-- START Figures -->
     <div class="container mt-5">
       <div class="row d-flex justify-content-center">
-        <div class="col-xs ">
+        <div class="col-xs">
           <figure class="figure">
             <img src="images/prod1.png" class="figure-img img-fluid rounded" />
             <figcaption
@@ -100,7 +101,7 @@
             </figcaption>
           </figure>
         </div>
-        <div class="col-4">
+        <div class="col-4 ml-5">
           <h4>Whiskas Favourite 1kg</h4>
           <p>IDR 219.000</p>
           <p class="mt-4">How much?</p>
