--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- START NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand"  href="#">
+        <a class="navbar-brand" href="#">
           <img src="images/footer.png" alt="PetShop" />
         </a>
         <button
@@ -43,25 +43,29 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse " id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Category</a>
+              <a class="nav-link" href="index.html">Category</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Product</a>
+              <a class="nav-link" href="single.html">Product</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About Us</a>
             </li>
           </ul>
-          <a href="" class="nav-link text-black"><i class="fas fa-shopping-cart ml-4"></i> My Cart ( <span>12</span> ) </a>
+          <a href="" class="nav-link text-black"
+            ><i class="fas fa-shopping-cart ml-4"></i> My Cart (
+            <span>12</span> )
+          </a>
         </div>
       </div>
     </nav>
+    -->
     <!-- END NAVBAR -->
 
      <!-- START CAROUSEL -->
