--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
         </div>
       </div>
       <div class="carousel-caption d-none d-md-block">
-      
         <h1 class="text-hero">Looking for a <br><span>Best Friend?</span></h5>
         <p class="text-banner">Our best pets <br> are waiting for a home</p>
-        <a href="single.html" class="btn btn-warning">Get It Now</a>
+        <a href="single.html" class="btn btn-warning get">Get It Now</a>
       </div>
 
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -151,38 +150,46 @@
          <div class="row d-flex justify-content-center">
            <div class="col-xs-3">
             <figure class="figure">
+              <a href="single.html">
               <img src="images/w-1.png" class="figure-img img-fluid rounded">
               <figcaption class="figure-caption text-center">
                 <h5>Buldog</h5>
                 <p>IDR 560.000</p>
               </figcaption>
+            </a>
             </figure>
            </div>
            <div class="col-xs-6">
             <figure class="figure">
+              <a href="single.html">
               <img src="images/w-2.png" class="figure-img img-fluid rounded">
               <figcaption class="figure-caption text-center">
                 <h5>Baby Tiger Cat</h5>
                 <p>IDR 1.560.000</p>
               </figcaption>
+            </a>
             </figure>
            </div>
            <div class="col-xs-6">
             <figure class="figure">
+              <a href="single.html">
               <img src="images/w-3.png" class="figure-img img-fluid rounded">
               <figcaption class="figure-caption text-center">
                 <h5>Baby Kitten</h5>
                 <p>IDR 360.000</p>
               </figcaption>
+            </a>
             </figure>
            </div>
            <div class="col-xs-6">
             <figure class="figure">
+              <a href="single.html">
               <img src="images/w-4.png" class="figure-img img-fluid rounded">
               <figcaption class="figure-caption text-center">
                 <h5>Sphinx Cat</h5>
                 <p>IDR 2.560.000</p>
               </figcaption>
+            </a>
             </figure>
            </div>
          </div>
