replace img pd-1 to dog

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
          <div class="row">
            <div class="col-6">
             <figure class="figure">
-              <img src="images/pd-1.png" class="figure-img img-fluid rounded">
+              <img src="images/dog.png" class="figure-img img-fluid rounded">
               <figcaption class="figure-caption">
                 <h5>Dog</h5>
               </figcaption>
