fix responsive mobile S

--- a/single.html
+++ b/single.html
@@ -101,7 +101,7 @@
             </figcaption>
           </figure>
         </div>
-        <div class="col-4 ml-5">
+        <div class="col-5  ml-5">
           <h4>Whiskas Favourite 1kg</h4>
           <p>IDR 219.000</p>
           <p class="mt-4">How much?</p>
@@ -110,7 +110,7 @@
               <button type="button" class="btn btn-danger">-</button>
             </div>
             <input type="text" class="form-control" placeholder="1 Whiskas" />
-            <div class="input-group-append">
+            <div class="input-group-append plus">
               <button type="button" class="btn btn-primary">+</button>
             </div>
           </div>
