--- a/cart.html
+++ b/cart.html
@@ -87,12 +87,12 @@
           <div class="col-lg-6">
             <h4 class="mb-4">Your Items</h4>
             <div class="row mb-4">
-              <div class="col-2">
-                <img src="images/cek1.png" alt="">
+              <div class="col-md">
+                <img src="images/2.png" alt="">
               </div>
               <div class="col-4">
-                <p class="m-0">Whiskas Favourite</p>
-                <p class="m-0" style="color: #b7b7b7;">IDR 299.000</p>
+                <p class="m-0">Cat Britania</p>
+                <p class="m-0" style="color: #b7b7b7;">IDR 229.000</p>
               </div>
               <div class="col">
                 <button type="button" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></button>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="row mb-4">
-              <div class="col-2">
+              <div class="col-md">
                 <img src="images/2.png" alt="">
               </div>
               <div class="col-4">
@@ -135,12 +135,12 @@
             </div>
 
             <div class="row mb-4">
-              <div class="col-2">
-                <img src="images/3.png" alt="">
+              <div class="col-md">
+                <img src="images/2.png" alt="">
               </div>
               <div class="col-4">
-                <p class="m-0">Smart Dog</p>
-                <p class="m-0" style="color: #b7b7b7;">IDR 2.549.000</p>
+                <p class="m-0">Cat Britania</p>
+                <p class="m-0" style="color: #b7b7b7;">IDR 729.000</p>
               </div>
               <div class="col">
                 <button type="button" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></button>
