--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
            </div>
          </div>
          <div class="row">
-           <div class="col-6">
+           <div class="col-sm-6">
             <figure class="figure">
               <img src="images/dog.png" class="figure-img img-fluid rounded">
               <figcaption class="figure-caption">
@@ -119,7 +119,7 @@
               </figcaption>
             </figure>
            </div>
-           <div class="col-6">
+           <div class="col-sm-6">
             <figure class="figure">
               <img src="images/pd-2.png" class="figure-img img-fluid rounded">
               <figcaption class="figure-caption">
