--- a/single.html
+++ b/single.html
@@ -105,12 +105,12 @@
           <h4>Whiskas Favourite 1kg</h4>
           <p>IDR 219.000</p>
           <p class="mt-4">How much?</p>
-          <div class="input-group">
+          <div class="input-group col-xs">
             <div class="input-group-prepend">
               <button type="button" class="btn btn-danger">-</button>
             </div>
-            <input type="text" class="form-control" placeholder="1 Whiskas" />
-            <div class="input-group-append plus">
+            <input type="text" class="form-control" placeholder="1 Item" />
+            <div class="input-group-append">
               <button type="button" class="btn btn-primary">+</button>
             </div>
           </div>
