--- a/cart.html
+++ b/cart.html
@@ -88,11 +88,11 @@
             <h4 class="mb-4">Your Items</h4>
             <div class="row mb-4">
               <div class="col-md">
-                <img src="images/2.png" alt="">
+                <img src="images/1.png" alt="">
               </div>
               <div class="col-4">
-                <p class="m-0">Cat Britania</p>
-                <p class="m-0" style="color: #b7b7b7;">IDR 229.000</p>
+                <p class="m-0">Whiskas</p>
+                <p class="m-0" style="color: #b7b7b7;">IDR 1.613.000</p>
               </div>
               <div class="col">
                 <button type="button" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></button>
@@ -116,7 +116,7 @@
               </div>
               <div class="col-4">
                 <p class="m-0">Cat Britania</p>
-                <p class="m-0" style="color: #b7b7b7;">IDR 729.000</p>
+                <p class="m-0" style="color: #b7b7b7;">IDR 1.729.000</p>
               </div>
               <div class="col">
                 <button type="button" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></button>
@@ -136,11 +136,11 @@
 
             <div class="row mb-4">
               <div class="col-md">
-                <img src="images/2.png" alt="">
+                <img src="images/3.png" alt="">
               </div>
               <div class="col-4">
-                <p class="m-0">Cat Britania</p>
-                <p class="m-0" style="color: #b7b7b7;">IDR 729.000</p>
+                <p class="m-0">Smart Dog</p>
+                <p class="m-0" style="color: #b7b7b7;">IDR 3.941.000</p>
               </div>
               <div class="col">
                 <button type="button" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></button>
