update responsive fix

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
           <img class="d-block w-100" src="images/hero-3s.png" alt="Second slide">
         </div>
       </div>
+      <div class="carousel-caption">
+        <h1 class="text-hero">Looking for a <br><span>Best Friend?</span></h5>
+        <p class="text-banner">Our best pets <br> are waiting for a home</p>
+        <a href="single.html" class="btn btn-warning get">Get It Now</a>
+      </div>
 
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -88,11 +93,7 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-    <div class="carousel-caption d-none d-md-block">
-      <h1 class="text-hero">Looking for a <br><span>Best Friend?</span></h5>
-      <p class="text-banner">Our best pets <br> are waiting for a home</p>
-      <a href="single.html" class="btn btn-warning get">Get It Now</a>
-    </div>
+    
      <!-- END CAROUSEL -->
     
      <!-- Start Categories -->
